--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "hawksama/module-notice",
+  "name": "hawksama/module-notification",
   "version": "1.0.0",
   "description": "N/A",
   "type": "magento2-module",
@@ -14,7 +14,7 @@
       "registration.php"
     ],
     "psr-4": {
-      "Hawksama\\Notice\\": ""
+      "Hawksama\\Notification\\": ""
     }
   }
 }
